nignx/deamonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonset
  namespace: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-pod-daemonset-template
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

# commands
# kubectl apply -f deamonset.yml
# kubectl get daemonsets -n nginx
# kubectl get pods -n nginx -o wide
# kubectl describe daemonset nginx-daemonset -n nginx
# delete the daemonset
# kubectl delete daemonset nginx-daemonset -n nginx
# or
# kubectl delete -f deamonset.yml
# scale the daemonset
# kubectl scale daemonset nginx-daemonset --replicas=5 -n nginx
